08-portlet-configuration: Course Display Configuration

--- a/modules/liferay-courses-web/src/main/resources/content/Language_en.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language_en.properties
@@ -23,6 +23,7 @@ lecture=Lecture
 lectures=Lectures
 lectures-lecture-id=Lecture ID
 lectures-name=Name
+lectures-url-title=URL Title
 lectures-description=Description
 lectures-video-link=Video Link
 lectures-user=Author
@@ -46,3 +47,8 @@ tab-all-courses=All Courses
 # Screen Navigation
 screen-category-courses=Courses
 screen-category-lectures=Lectures
+
+# Configuration
+course-display-configuration-title=Course Display Configuration
+course-display-configuration-select-course=Select Course to Display
+course-display-configuration-alert=Please, select a Course to display in Portlet Configuration.
