--- a/modules/liferay-courses-web/src/main/resources/content/Language_en.properties
+++ b/modules/liferay-courses-web/src/main/resources/content/Language_en.properties
@@ -48,4 +48,8 @@ tab-all-courses=All Courses
 course-display-configuration-title=Course Display Configuration
 course-display-configuration-url-title=Course URL Title
 course-display-configuration-url-title-help=Specify the urlTitle of a course to display
+course-display-configuration-display-style=Display Style
 course-display-configuration-alert=Please, select a Course to display in Portlet Configuration.
+
+category.liferay-book=Liferay Book
+course-display-portlet-instance-configuration-name=Liferay Courses
